feat: support saved query/filter values in external api
